[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skill"
version = "0.1.0"
description = "CLI tool for managing AI agent skills from SkillMaster"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["skill", "ai", "agent", "cli", "skillmaster"]
authors = [
    { name = "SkillMaster Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.scripts]
skill = "agent_skill.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_skill"]
